src/test/ui/issues/issue-22673.stderr
error[E0391]: cycle detected when computing the supertraits of `Expr`
  --> $DIR/issue-22673.rs:1:1
   |
LL | trait Expr : PartialEq<Self::Item> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which again requires computing the supertraits of `Expr`, completing the cycle
note: cycle used when collecting item types in top-level module
  --> $DIR/issue-22673.rs:1:1
   |
LL | trait Expr : PartialEq<Self::Item> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
