src/test/ui/issues/issue-22673.rs
trait Expr : PartialEq<Self::Item> {
    //~^ ERROR: cycle detected
    type Item;
}

fn main() {}
